# buptcream_serial_comm_lab

./: CMakeLists.txt  CMakePresets.json  package.xml
include/serial_comm/: serial_receiver.hpp  serial_sender.hpp
scripts/: start.sh
src/: msg_publisher.cpp  serial_receiver.cpp  test_serial_receiver.cpp
